<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MapApp</string>
    <string name="prefs_key">NET.SPACIVE.MAPAPP.PREFERENCES</string>
    <string name="prefs_key_width">LINE_WIDTH</string>
    <string name="prefs_key_color">LINE_COLOR</string>
    <string name="prefs_key_rate">SAMPLING_RATE</string>

    <string name="title_map">Map</string>
    <string name="title_stats">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_location_details">Location details</string>
    <string name="title_accuracy">Accuracy:</string>
    <string name="title_source">Source:</string>
    <string name="title_colorpicker">Pick a color</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_rationale">
        Access to location data is essential
        for this app to work. This app will not
        work until access to location will be enabled.
    </string>

    <string name="action_ok">OK</string>

    <string name="postfix_meters">m</string>

    <string name="setting_line_width">Line width</string>
    <string name="setting_line_color">Line color</string>
    <string name="setting_sampling">Location sampling period</string>

    <string name="setting_sampling_5s">5s</string>
    <string name="setting_sampling_30s">30s</string>
    <string name="setting_sampling_2m">2m</string>
    <string name="setting_sampling_5m">5m</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Default title for color picker dialog [CHAR LIMIT=30] -->
    <string name="color_picker_default_title">Select a Color</string>
    <!-- Content description for a color square. -->
    <string name="color_swatch_description">Color <xliff:g id="color_index" example="14">%1$d</xliff:g></string>
    <!-- Content description for a selected color square. -->
    <string name="color_swatch_description_selected">Color <xliff:g id="color_index" example="14">%1$d</xliff:g> selected</string>

</resources>
