<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLineWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:srcCompat="@drawable/baseline_line_weight_24px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_line_width"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/seekbarLineWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:paddingStart="6dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="6dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewLineColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLineColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:srcCompat="@drawable/baseline_palette_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_line_color"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_line"
                android:layout_width="64dp"
                android:layout_height="4dp"
                android:layout_marginLeft="16dp"
                android:background="@color/red" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_shadow_start_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cropToPadding="false"
                android:padding="24dp"
                app:srcCompat="@drawable/baseline_timer_24px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_sampling"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radio_rates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_5s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_sampling_5s"/>


                    <RadioButton
                        android:id="@+id/radio_30s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_sampling_30s"/>


                    <RadioButton
                        android:id="@+id/radio_2m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_sampling_2m"/>


                    <RadioButton
                        android:id="@+id/radio_5m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_sampling_5m"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>